tests/baselines/reference/decoratorOnClassConstructorParameter4(strict=true).errors.txt
decoratorOnClassConstructorParameter4.ts(4,17): error TS7006: Parameter 'public' implicitly has an 'any' type.
decoratorOnClassConstructorParameter4.ts(4,24): error TS1005: ',' expected.
decoratorOnClassConstructorParameter4.ts(4,25): error TS1239: Unable to resolve signature of parameter decorator when called as an expression.
  Argument of type 'undefined' is not assignable to parameter of type 'string | symbol'.


==== decoratorOnClassConstructorParameter4.ts (3 errors) ====
    declare function dec(target: Function, propertyKey: string | symbol, parameterIndex: number): void;
    
    class C {
        constructor(public @dec p: number) {}
                    ~~~~~~
!!! error TS7006: Parameter 'public' implicitly has an 'any' type.
                           ~
!!! error TS1005: ',' expected.
                            ~~~
!!! error TS1239: Unable to resolve signature of parameter decorator when called as an expression.
!!! error TS1239:   Argument of type 'undefined' is not assignable to parameter of type 'string | symbol'.
    }